# endless-sky

./: .gitignore  CMakeLists.txt  CMakePresets.json  EndlessSky.cbp  EndlessSky.cscope_file_list  EndlessSkyLib.cbp  EndlessSkyLib.cscope_file_list  build.zig  build_sources.zig  keys.txt  readme-cmake.md  vcpkg-configuration.json  vcpkg.json
ccosmic-text-gl/: Cargo.toml  build.rs
ccosmic-text-gl/src/: blit.frag  blit.vert  lib.rs
ccosmic_text/: Cargo.toml  cbindgen.toml
ccosmic_text/src/: lib.rs
data/: interfaces.txt  map.txt  shaders.txt
data/_ui/: help.txt  interfaces.txt  tooltips.txt
data/korath/: korath outfits.txt
data/remnant/: remnant outfits.txt  remnant.txt
overlays/: zig-x86_64-windows.cmake
shaders/badBloom/: fragment.glsl
shaders/fakeHDR/: FragmentCode.txt  fragment.glsl
shaders/gaussian bloom/: fragment.glsl
shaders/gravitationlens/: fragment.glsl
shaders/invert/: FragmentCode.txt  fragment.glsl
shaders/lensdistort/: fragment.glsl
source/: AI.cpp  Action.cpp  Action.h  AmmoDisplay.cpp  BankPanel.cpp  BankPanel.h  BatchShader.cpp  BoardingPanel.cpp  BoardingPanel.h  Body.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Command.cpp  Command.h  ControlSettingsPanel.cpp  ControlSettingsPanel.h  Controller.cpp  Controller.h  Cursor.cpp  Cursor.h  CustomShader.cpp  CustomShader.h  Debug.cpp  Debug.h  Dialog.cpp  Dialog.h  Effect.cpp  Effect.h  Engine.cpp  Engine.h  EscortDisplay.cpp  Files.cpp  Files.h  FillShader.cpp  FogShader.cpp  FontSystem.cpp  FontSystem.h  (+103 more)
utils/: vcpkg_bootstrap.zig  zigcc.cmd  zigcxx.cmd
(+49 files in other folders)
