[package]
name = "ccosmic-text-gl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cew = "0.1.0"
cosmic-text = "0.10.0"
glow = "0.13.0"
guillotiere = "0.6.2"

[build-dependencies]
cbindgen = "0.26.0"
